--- a/ShapeTest WatchKit App/Base.lproj/Interface.storyboard
+++ b/ShapeTest WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="16097" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="16096" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
     <device id="watch38"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -14,14 +14,14 @@
                         <label alignment="center" text="EMA2" id="1PG-j8-gce">
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         </label>
-                        <button width="122" alignment="center" verticalAlignment="center" title="Run Test Shape" id="LBe-Oq-lI8">
+                        <button width="136" alignment="center" verticalAlignment="center" title="Run Test Shape" id="LBe-Oq-lI8">
                             <color key="backgroundColor" red="0.069151288089459917" green="0.61084311129773594" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="font" type="boldSystem" pointSize="17"/>
                             <connections>
                                 <segue destination="2zI-eV-cGV" kind="push" id="szB-M9-TTY"/>
                             </connections>
                         </button>
-                        <button width="122" height="40" alignment="center" verticalAlignment="center" title="Test Results" id="BxC-y6-YXT">
+                        <button width="136" height="42" alignment="center" verticalAlignment="center" title="Test Results" id="BxC-y6-YXT">
                             <color key="backgroundColor" red="0.30339934882517938" green="0.72170498704663211" blue="0.13574322956856624" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="font" type="boldSystem" pointSize="18"/>
                         </button>
@@ -36,14 +36,14 @@
             <objects>
                 <controller id="2zI-eV-cGV" customClass="InstructionsInterfaceController" customModule="ShapeTest_WatchKit_Extension">
                     <items>
-                        <label width="109" height="21" alignment="center" text="INSTRUCTIONS" id="zPK-iE-Tyn">
+                        <label width="125" height="21" alignment="center" text="INSTRUCTIONS" textAlignment="center" id="zPK-iE-Tyn">
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <fontDescription key="font" type="boldSystem" pointSize="15"/>
+                            <fontDescription key="font" type="boldSystem" pointSize="16"/>
                         </label>
                         <separator width="115" alignment="center" id="h1j-hE-dFC">
                             <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </separator>
-                        <label width="127" height="84" alignment="center" text="Press YES if the shape is the same as the previous one, and NOT if is not. " textAlignment="left" numberOfLines="20" id="cGO-dw-C4M">
+                        <label width="136" height="84" alignment="center" text="Press YES if the shape is the same as the previous one, and NOT if is not. " textAlignment="left" numberOfLines="20" id="cGO-dw-C4M">
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <fontDescription key="font" type="system" pointSize="14"/>
                         </label>
@@ -51,7 +51,7 @@
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="backgroundColor" red="0.01215754361" green="0.70759556329999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
-                                <segue destination="etI-JE-5Y1" kind="push" id="ntj-Kb-Tz8"/>
+                                <segue destination="etI-JE-5Y1" kind="push" id="NZK-Vu-1sK"/>
                             </connections>
                         </button>
                     </items>
@@ -63,24 +63,47 @@
         <!--Run Shape Test Interface Controller-->
         <scene sceneID="1ar-1c-QRr">
             <objects>
-                <controller id="etI-JE-5Y1" customClass="RunShapeTestInterfaceController">
+                <controller id="etI-JE-5Y1" customClass="RunShapeTestInterfaceController" customModule="ShapeTest_WatchKit_Extension">
                     <items>
-                        <label alignment="center" verticalAlignment="center" text="3" id="80P-3e-C55">
+                        <timer width="38" height="28" alignment="center" textAlignment="center" format="abbreviated" previewedSeconds="45" id="990-Q6-DEu">
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <fontDescription key="font" type="boldSystem" pointSize="25"/>
-                        </label>
-                        <timer alignment="center" previewedSeconds="45" id="990-Q6-DEu">
-                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="font" type="system" weight="semibold" pointSize="20"/>
                             <calendarUnit key="units" second="YES"/>
                         </timer>
+                        <group width="1" alignment="center" verticalAlignment="center" layout="overlap" id="2Fa-yF-E9m">
+                            <items>
+                                <imageView width="84" height="79" alignment="center" verticalAlignment="center" semanticContentAttribute="spatial" image="Circle" id="SZU-Kw-8Wg"/>
+                                <label width="30" height="34" alignment="center" verticalAlignment="center" semanticContentAttribute="playback" text="3" textAlignment="center" id="80P-3e-C55">
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="font" type="boldSystem" pointSize="25"/>
+                                </label>
+                            </items>
+                        </group>
+                        <group width="136" height="44" alignment="center" verticalAlignment="center" layout="overlap" id="DOt-ir-5VY">
+                            <items>
+                                <button width="59" alignment="right" title="NO" id="ESs-dD-YxU">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" red="0.86828714609146118" green="0.23194622993469238" blue="0.18867287039756775" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="font" type="boldSystem" pointSize="15"/>
+                                </button>
+                                <button width="64" alignment="left" title="YES" id="uc7-bI-gAO">
+                                    <color key="backgroundColor" red="0.41287142038345337" green="0.79146242141723633" blue="0.089261449873447418" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="font" type="system" weight="semibold" pointSize="15"/>
+                                </button>
+                            </items>
+                        </group>
                     </items>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
-                        <outlet property="startTimerLabel" destination="80P-3e-C55" id="Vzg-yX-ble"/>
+                        <outlet property="noButton" destination="ESs-dD-YxU" id="9ug-Ne-RpE"/>
+                        <outlet property="shapeTestImage" destination="SZU-Kw-8Wg" id="1sO-12-Oex"/>
+                        <outlet property="shapeTestTimer" destination="990-Q6-DEu" id="aUd-mm-8oz"/>
+                        <outlet property="startTimerLabel" destination="80P-3e-C55" id="SEZ-4H-0xu"/>
+                        <outlet property="yesButton" destination="uc7-bI-gAO" id="H5V-uF-Zzh"/>
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="619" y="16"/>
+            <point key="canvasLocation" x="619" y="-7"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -114,4 +137,7 @@
             <point key="canvasLocation" x="468" y="345"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Circle" width="222" height="222"/>
+    </resources>
 </document>
