--- a/ShapeTest WatchKit App/Base.lproj/Interface.storyboard
+++ b/ShapeTest WatchKit App/Base.lproj/Interface.storyboard
@@ -34,29 +34,52 @@
             </objects>
             <point key="canvasLocation" x="-52" y="16"/>
         </scene>
-        <!--Interface Controller-->
+        <!--Results Interface Controller-->
         <scene sceneID="Qet-zk-dzd">
             <objects>
-                <controller id="u28-Qh-UvE">
+                <controller id="u28-Qh-UvE" customClass="ResultsInterfaceController" customModule="ShapeTest_WatchKit_Extension">
+                    <items>
+                        <label height="27" alignment="center" text="Shape Test Results" textAlignment="center" id="oPP-Md-GRz">
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <fontDescription key="font" type="system" pointSize="15"/>
+                        </label>
+                        <separator width="118" alignment="center" id="iWo-8z-rWb">
+                            <color key="color" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </separator>
+                        <table alignment="left" id="6lT-Pq-kwf"/>
+                        <label alignment="left" text="Date:" id="pcW-kD-9aY">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </label>
+                        <label alignment="left" text="Score:" id="jPr-kN-knf">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </label>
+                        <label width="80" alignment="left" text="# Shapes:" id="EcL-19-cK9">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </label>
+                        <button width="103" height="27" alignment="center" verticalAlignment="center" title="Ok" id="aRX-8c-YfA">
+                            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="okButtonPressed" destination="u28-Qh-UvE" id="h0j-8d-MMC"/>
+                                <segue destination="AgC-eL-Hgc" kind="push" id="3zP-IP-Jxv"/>
+                            </connections>
+                        </button>
+                    </items>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="-68" y="370"/>
+            <point key="canvasLocation" x="-68" y="371"/>
         </scene>
         <!--Instructions Interface Controller-->
         <scene sceneID="aao-HH-5hk">
             <objects>
                 <controller id="2zI-eV-cGV" customClass="InstructionsInterfaceController" customModule="ShapeTest_WatchKit_Extension">
                     <items>
-                        <label width="125" height="21" alignment="center" text="Instructions" textAlignment="center" id="zPK-iE-Tyn">
+                        <label width="125" height="17" alignment="center" text="INSTRUCTIONS" textAlignment="center" id="zPK-iE-Tyn">
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <fontDescription key="font" type="boldSystem" pointSize="16"/>
+                            <fontDescription key="font" type="system" weight="medium" pointSize="18"/>
                         </label>
-                        <separator width="115" alignment="center" id="h1j-hE-dFC">
-                            <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </separator>
-                        <imageView width="136" height="95" alignment="center" image="Instructions" contentMode="scaleAspectFit" id="UZt-xa-QDy"/>
-                        <button width="100" height="29" alignment="center" title="START" id="o56-Pd-UkU">
+                        <imageView height="84" alignment="left" image="ins" id="WTQ-py-xOP"/>
+                        <button width="100" height="29" alignment="center" verticalAlignment="center" semanticContentAttribute="playback" title="START" id="o56-Pd-UkU">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="backgroundColor" red="0.01215754361" green="0.70759556329999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
@@ -67,25 +90,32 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="296" y="20"/>
+            <point key="canvasLocation" x="296" y="18"/>
         </scene>
         <!--Run Shape Test Interface Controller-->
         <scene sceneID="1ar-1c-QRr">
             <objects>
                 <controller id="etI-JE-5Y1" customClass="RunShapeTestInterfaceController" customModule="ShapeTest_WatchKit_Extension">
                     <items>
-                        <timer width="34" height="27" alignment="center" textAlignment="center" format="abbreviated" previewedSeconds="45" id="990-Q6-DEu">
+                        <timer width="34" height="27" alignment="center" semanticContentAttribute="playback" textAlignment="center" format="abbreviated" previewedSeconds="45" id="990-Q6-DEu">
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="font" type="system" weight="semibold" pointSize="20"/>
                             <calendarUnit key="units" second="YES"/>
                         </timer>
+                        <label width="30" height="27" alignment="center" verticalAlignment="center" semanticContentAttribute="playback" text="3" textAlignment="center" id="80P-3e-C55">
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="font" type="boldSystem" pointSize="25"/>
+                        </label>
                         <group width="1" alignment="center" verticalAlignment="center" layout="overlap" id="2Fa-yF-E9m">
                             <items>
                                 <imageView width="84" height="84" alignment="center" verticalAlignment="center" semanticContentAttribute="spatial" image="Circle" id="SZU-Kw-8Wg"/>
-                                <label width="30" height="34" alignment="center" verticalAlignment="center" semanticContentAttribute="playback" text="3" textAlignment="center" id="80P-3e-C55">
-                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <fontDescription key="font" type="boldSystem" pointSize="25"/>
-                                </label>
+                                <button width="114" alignment="center" verticalAlignment="center" title="Done" id="Hwo-HM-aqP">
+                                    <color key="backgroundColor" red="0.0" green="0.64326625429999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="font" type="boldSystem" pointSize="15"/>
+                                    <connections>
+                                        <segue destination="u28-Qh-UvE" kind="modal" id="w9c-mc-ZtH"/>
+                                    </connections>
+                                </button>
                             </items>
                         </group>
                         <group width="136" height="44" alignment="center" verticalAlignment="center" layout="overlap" id="KJi-F6-o9m">
@@ -110,6 +140,7 @@
                     </items>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
+                        <outlet property="doneButton" destination="Hwo-HM-aqP" id="5Od-a8-3pq"/>
                         <outlet property="noButton" destination="ESs-dD-YxU" id="9ug-Ne-RpE"/>
                         <outlet property="shapeTestImage" destination="SZU-Kw-8Wg" id="1sO-12-Oex"/>
                         <outlet property="shapeTestTimer" destination="990-Q6-DEu" id="aUd-mm-8oz"/>
@@ -118,7 +149,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="640" y="23"/>
+            <point key="canvasLocation" x="640" y="19.5"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -152,8 +183,11 @@
             <point key="canvasLocation" x="468" y="345"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="w9c-mc-ZtH"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="Circle" width="222" height="222"/>
-        <image name="Instructions" width="344" height="221"/>
+        <image name="ins" width="301" height="199"/>
     </resources>
 </document>
