--- a/ShapeTest WatchKit App/Base.lproj/Interface.storyboard
+++ b/ShapeTest WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="16097" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="16097" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
     <device id="watch38"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -67,14 +67,18 @@
             <objects>
                 <controller id="2zI-eV-cGV" customClass="InstructionsInterfaceController" customModule="ShapeTest_WatchKit_Extension">
                     <items>
-                        <label width="136" height="17" alignment="center" text="INSTRUCTIONS" textAlignment="center" id="zPK-iE-Tyn">
-                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <fontDescription key="font" type="system" pointSize="16"/>
-                        </label>
-                        <separator width="122" alignment="center" id="nHw-Pg-OYk">
-                            <color key="color" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
-                        </separator>
-                        <imageView height="88" alignment="left" image="instructionsImage" id="NxP-DG-bIe"/>
+                        <group width="1" alignment="left" layout="overlap" id="ge9-76-fQY">
+                            <items>
+                                <label width="136" height="22" alignment="center" verticalAlignment="center" semanticContentAttribute="spatial" text="INSTRUCTIONS" textAlignment="center" id="zPK-iE-Tyn">
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="font" style="UICTFontTextStyleBody"/>
+                                </label>
+                                <separator width="127" height="1" alignment="center" verticalAlignment="bottom" semanticContentAttribute="spatial" id="Dxw-nZ-en4">
+                                    <color key="color" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </separator>
+                            </items>
+                        </group>
+                        <imageView height="84" alignment="left" image="instructionsImage" id="NxP-DG-bIe"/>
                         <button width="100" height="29" alignment="center" verticalAlignment="center" semanticContentAttribute="playback" title="START" id="o56-Pd-UkU">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="backgroundColor" red="0.01215754361" green="0.70759556329999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -86,7 +90,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="296" y="18"/>
+            <point key="canvasLocation" x="295" y="12"/>
         </scene>
         <!--Run Shape Test Interface Controller-->
         <scene sceneID="1ar-1c-QRr">
@@ -109,14 +113,18 @@
                                     <color key="backgroundColor" red="0.0" green="0.64326625429999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="font" type="boldSystem" pointSize="15"/>
                                     <connections>
-                                        <action selector="DoneBtnTapped" destination="etI-JE-5Y1" id="y6S-Qd-mc2"/>
+                                        <segue destination="Vsy-lN-lDm" kind="push" identifier="toCurrentResults" id="cHl-E5-dpD"/>
                                     </connections>
                                 </button>
+                                <label alignment="left" text="  +1" id="waZ-Yu-vvG">
+                                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="font" type="system" weight="heavy" pointSize="16"/>
+                                </label>
                             </items>
                         </group>
                         <group width="136" height="44" alignment="center" verticalAlignment="center" layout="overlap" id="KJi-F6-o9m">
                             <items>
-                                <button width="58" height="35" alignment="right" title="NO" id="ESs-dD-YxU">
+                                <button width="58" height="37" alignment="right" title="NO" id="ESs-dD-YxU">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="backgroundColor" red="0.86828714609146118" green="0.23194622993469238" blue="0.18867287039756775" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="font" type="boldSystem" pointSize="15"/>
@@ -124,7 +132,7 @@
                                         <action selector="noButtonPressed" destination="etI-JE-5Y1" id="jzB-fE-98a"/>
                                     </connections>
                                 </button>
-                                <button width="60" height="35" alignment="left" title="YES" id="uc7-bI-gAO">
+                                <button width="60" height="36" alignment="left" title="YES" id="uc7-bI-gAO">
                                     <color key="backgroundColor" red="0.41287142038345337" green="0.79146242141723633" blue="0.089261449873447418" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="font" type="system" weight="semibold" pointSize="15"/>
                                     <connections>
@@ -138,6 +146,7 @@
                     <connections>
                         <outlet property="doneButton" destination="Hwo-HM-aqP" id="5Od-a8-3pq"/>
                         <outlet property="noButton" destination="ESs-dD-YxU" id="9ug-Ne-RpE"/>
+                        <outlet property="plusOneLabel" destination="waZ-Yu-vvG" id="prU-ik-IIK"/>
                         <outlet property="shapeTestImage" destination="SZU-Kw-8Wg" id="1sO-12-Oex"/>
                         <outlet property="shapeTestTimer" destination="990-Q6-DEu" id="aUd-mm-8oz"/>
                         <outlet property="startTimerLabel" destination="80P-3e-C55" id="SEZ-4H-0xu"/>
@@ -147,10 +156,10 @@
             </objects>
             <point key="canvasLocation" x="640" y="19.5"/>
         </scene>
-        <!--toCurrentResults-->
+        <!--Current Results-->
         <scene sceneID="SUk-PI-Ft5">
             <objects>
-                <controller identifier="toCurrentResults" id="Vsy-lN-lDm" customClass="CurrentResultsInterfaceController" customModule="ShapeTest_WatchKit_Extension">
+                <controller identifier="Current Results" id="Vsy-lN-lDm" customClass="CurrentResultsInterfaceController" customModule="ShapeTest_WatchKit_Extension">
                     <items>
                         <label alignment="center" text="RESULTS" id="UXE-0L-CBK">
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
@@ -158,14 +167,17 @@
                         <separator width="110" alignment="center" id="Bbj-II-G03">
                             <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </separator>
-                        <label width="62" height="34" alignment="left" text="Score:" id="KEJ-YD-hhw">
+                        <label width="100" height="34" alignment="center" text="Score:" id="KEJ-YD-hhw">
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                         </label>
                     </items>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="scoreLabel" destination="KEJ-YD-hhw" id="Ra1-aS-2yx"/>
+                    </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="975" y="4"/>
+            <point key="canvasLocation" x="990" y="17"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
