--- a/Shape/Shape WatchKit App/Base.lproj/Interface.storyboard
+++ b/Shape/Shape WatchKit App/Base.lproj/Interface.storyboard
@@ -13,12 +13,12 @@
                     <items>
                         <label alignment="center" text="SHAPE TEST" id="wWK-9X-U1D">
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <fontDescription key="font" type="system" pointSize="21"/>
+                            <fontDescription key="font" type="system" pointSize="24"/>
                         </label>
                         <button width="1" height="60" alignment="left" title="Run Shape Test" id="8ov-Mt-bNO">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <fontDescription key="font" type="system" weight="medium" pointSize="23"/>
+                            <fontDescription key="font" type="system" weight="semibold" pointSize="23"/>
                             <connections>
                                 <segue destination="fUw-M8-Z6B" kind="push" id="6ex-ya-9PW"/>
                             </connections>
@@ -34,21 +34,25 @@
             <objects>
                 <controller id="fUw-M8-Z6B">
                     <items>
-                        <group width="1" height="147" alignment="left" layout="vertical" id="ynE-TX-JAG" userLabel="InstructionsGroup">
+                        <group width="1" height="144" alignment="left" layout="vertical" spacing="3" id="ynE-TX-JAG" userLabel="InstructionsGroup">
                             <items>
                                 <label alignment="center" text="Instructions" id="D4Q-la-2qk">
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                                     <fontDescription key="font" type="system" weight="medium" pointSize="21"/>
                                 </label>
-                                <imageView height="78" alignment="center" image="Frame2" id="nuC-bp-5og"/>
-                                <button width="1" height="40" alignment="center" verticalAlignment="bottom" title="START" id="6cQ-56-10H">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <fontDescription key="font" type="system" weight="medium" pointSize="21"/>
-                                    <connections>
-                                        <segue destination="Tko-NX-12F" kind="modal" id="AN4-GX-uvw"/>
-                                    </connections>
-                                </button>
+                                <imageView width="1" widthAdjustment="7" height="78" alignment="center" image="Frame2" id="nuC-bp-5og"/>
+                                <group width="1" alignment="left" id="Hku-oF-HvH">
+                                    <items>
+                                        <button width="0.90000000000000002" height="39" alignment="center" verticalAlignment="bottom" title="START" id="6cQ-56-10H">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="font" type="system" weight="medium" pointSize="22"/>
+                                            <connections>
+                                                <segue destination="Tko-NX-12F" kind="modal" id="AN4-GX-uvw"/>
+                                            </connections>
+                                        </button>
+                                    </items>
+                                </group>
                             </items>
                         </group>
                     </items>
@@ -83,11 +87,17 @@
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="backgroundColor" red="0.86828714609146118" green="0.23194622993469238" blue="0.18867287039756775" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <fontDescription key="font" type="system" weight="semibold" pointSize="25"/>
+                                            <connections>
+                                                <action selector="noButtonPressed" destination="Tko-NX-12F" id="1Mj-vW-IhC"/>
+                                            </connections>
                                         </button>
                                         <button width="58" height="41" alignment="right" verticalAlignment="bottom" title="YES" id="fWf-iS-ncw" userLabel="yesButton">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="backgroundColor" red="0.34447327256202698" green="0.6685941219329834" blue="0.10907918959856033" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <fontDescription key="font" type="system" weight="semibold" pointSize="25"/>
+                                            <connections>
+                                                <action selector="yesButtonPressed" destination="Tko-NX-12F" id="jN9-YA-bXq"/>
+                                            </connections>
                                         </button>
                                     </items>
                                     <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="0.5"/>
